force-app/src/objects/c2g__AuditData__c.object
<CustomObject>
    <description>This is a temporary intermediate object used to generate the audit file using Data Loader.</description>
    <fields>
        <fullName>c2g__LastTLICreatedTimeStamp__c</fullName>
        <description>Hold Created Date and Time of last transaction line item processed for audit data.</description>
        <label>Deprecated: Last TLI Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Company.</description>
        <label>Deprecated: Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Audit Data</relationshipLabel>
        <relationshipName>AuditDataCompany</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodFrom__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Period From.</description>
        <label>Deprecated: Period From</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Audit Data</relationshipLabel>
        <relationshipName>AuditDataPeriodFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodTo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Period To.</description>
        <label>Deprecated: Period To</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Audit Data</relationshipLabel>
        <relationshipName>AuditDataPeriodTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <description>The deletion status of the Audit Data object (&quot;Deleting&quot; or &quot;Deleting Error&quot;).</description>
        <label>Deprecated: Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deleting</fullName>
                </value>
                <value>
                    <fullName>Deleting Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Year.</description>
        <label>Deprecated: Year</label>
        <referenceTo>c2g__codaYear__c</referenceTo>
        <relationshipLabel>Audit Data</relationshipLabel>
        <relationshipName>AuditDataYear</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Deprecated: Audit Data</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD{000000}</displayFormat>
        <label>Audit Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>